--- a/project/bike-sharing-project-using-autogluon.ipynb
+++ b/project/bike-sharing-project-using-autogluon.ipynb
@@ -120,8 +120,8 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: pip in /usr/local/lib/python3.10/site-packages (24.0)\n",
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0mCollecting seaborn\n",
+      "\u001B[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001B[0m\u001B[33m\n",
+      "\u001B[0mCollecting seaborn\n",
       "  Downloading seaborn-0.13.2-py3-none-any.whl.metadata (5.4 kB)\n",
       "Requirement already satisfied: numpy!=1.24.0,>=1.20 in /usr/local/lib/python3.10/site-packages (from seaborn) (1.26.4)\n",
       "Requirement already satisfied: pandas>=1.2 in /usr/local/lib/python3.10/site-packages (from seaborn) (2.2.2)\n",
@@ -138,11 +138,11 @@
       "Requirement already satisfied: tzdata>=2022.7 in /usr/local/lib/python3.10/site-packages (from pandas>=1.2->seaborn) (2024.1)\n",
       "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/site-packages (from python-dateutil>=2.7->matplotlib!=3.6.1,>=3.4->seaborn) (1.16.0)\n",
       "Downloading seaborn-0.13.2-py3-none-any.whl (294 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m294.9/294.9 kB\u001b[0m \u001b[31m3.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0mta \u001b[36m0:00:01\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: seaborn\n",
+      "\u001B[2K   \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m294.9/294.9 kB\u001B[0m \u001B[31m3.1 MB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0mta \u001B[36m0:00:01\u001B[0m\n",
+      "\u001B[?25hInstalling collected packages: seaborn\n",
       "Successfully installed seaborn-0.13.2\n",
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0mRequirement already satisfied: kaggle in /usr/local/lib/python3.10/site-packages (1.6.12)\n",
+      "\u001B[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001B[0m\u001B[33m\n",
+      "\u001B[0mRequirement already satisfied: kaggle in /usr/local/lib/python3.10/site-packages (1.6.12)\n",
       "Requirement already satisfied: six>=1.10 in /usr/local/lib/python3.10/site-packages (from kaggle) (1.16.0)\n",
       "Requirement already satisfied: certifi>=2023.7.22 in /usr/local/lib/python3.10/site-packages (from kaggle) (2023.11.17)\n",
       "Requirement already satisfied: python-dateutil in /usr/local/lib/python3.10/site-packages (from kaggle) (2.8.2)\n",
@@ -155,8 +155,8 @@
       "Requirement already satisfied: text-unidecode>=1.3 in /usr/local/lib/python3.10/site-packages (from python-slugify->kaggle) (1.3)\n",
       "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/site-packages (from requests->kaggle) (3.3.2)\n",
       "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/site-packages (from requests->kaggle) (3.6)\n",
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0mRequirement already satisfied: bokeh==2.0.1 in /usr/local/lib/python3.10/site-packages (2.0.1)\n",
+      "\u001B[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001B[0m\u001B[33m\n",
+      "\u001B[0mRequirement already satisfied: bokeh==2.0.1 in /usr/local/lib/python3.10/site-packages (2.0.1)\n",
       "Requirement already satisfied: PyYAML>=3.10 in /usr/local/lib/python3.10/site-packages (from bokeh==2.0.1) (6.0.1)\n",
       "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.10/site-packages (from bokeh==2.0.1) (2.8.2)\n",
       "Requirement already satisfied: Jinja2>=2.7 in /usr/local/lib/python3.10/site-packages (from bokeh==2.0.1) (3.1.3)\n",
@@ -167,8 +167,8 @@
       "Requirement already satisfied: typing-extensions>=3.7.4 in /usr/local/lib/python3.10/site-packages (from bokeh==2.0.1) (4.9.0)\n",
       "Requirement already satisfied: MarkupSafe>=2.0 in /usr/local/lib/python3.10/site-packages (from Jinja2>=2.7->bokeh==2.0.1) (2.1.4)\n",
       "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/site-packages (from python-dateutil>=2.1->bokeh==2.0.1) (1.16.0)\n",
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0mRequirement already satisfied: setuptools in /usr/local/lib/python3.10/site-packages (60.2.0)\n",
+      "\u001B[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001B[0m\u001B[33m\n",
+      "\u001B[0mRequirement already satisfied: setuptools in /usr/local/lib/python3.10/site-packages (60.2.0)\n",
       "Collecting setuptools\n",
       "  Using cached setuptools-69.5.1-py3-none-any.whl.metadata (6.2 kB)\n",
       "Requirement already satisfied: wheel in /usr/local/lib/python3.10/site-packages (0.43.0)\n",
@@ -178,11 +178,11 @@
       "    Found existing installation: setuptools 60.2.0\n",
       "    Uninstalling setuptools-60.2.0:\n",
       "      Successfully uninstalled setuptools-60.2.0\n",
-      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-      "openxlab 0.0.38 requires setuptools~=60.2.0, but you have setuptools 69.5.1 which is incompatible.\u001b[0m\u001b[31m\n",
-      "\u001b[0mSuccessfully installed setuptools-69.5.1\n",
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0mRequirement already satisfied: mxnet<2.0.0 in /usr/local/lib/python3.10/site-packages (1.9.1)\n",
+      "\u001B[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "openxlab 0.0.38 requires setuptools~=60.2.0, but you have setuptools 69.5.1 which is incompatible.\u001B[0m\u001B[31m\n",
+      "\u001B[0mSuccessfully installed setuptools-69.5.1\n",
+      "\u001B[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001B[0m\u001B[33m\n",
+      "\u001B[0mRequirement already satisfied: mxnet<2.0.0 in /usr/local/lib/python3.10/site-packages (1.9.1)\n",
       "Requirement already satisfied: bokeh==2.0.1 in /usr/local/lib/python3.10/site-packages (2.0.1)\n",
       "Requirement already satisfied: PyYAML>=3.10 in /usr/local/lib/python3.10/site-packages (from bokeh==2.0.1) (6.0.1)\n",
       "Requirement already satisfied: python-dateutil>=2.1 in /usr/local/lib/python3.10/site-packages (from bokeh==2.0.1) (2.8.2)\n",
@@ -200,8 +200,8 @@
       "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/site-packages (from requests<3,>=2.20.0->mxnet<2.0.0) (3.6)\n",
       "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.10/site-packages (from requests<3,>=2.20.0->mxnet<2.0.0) (1.26.18)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/site-packages (from requests<3,>=2.20.0->mxnet<2.0.0) (2023.11.17)\n",
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0mRequirement already satisfied: autogluon in /usr/local/lib/python3.10/site-packages (1.1.0)\n",
+      "\u001B[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001B[0m\u001B[33m\n",
+      "\u001B[0mRequirement already satisfied: autogluon in /usr/local/lib/python3.10/site-packages (1.1.0)\n",
       "Requirement already satisfied: autogluon.core==1.1.0 in /usr/local/lib/python3.10/site-packages (from autogluon.core[all]==1.1.0->autogluon) (1.1.0)\n",
       "Requirement already satisfied: autogluon.features==1.1.0 in /usr/local/lib/python3.10/site-packages (from autogluon) (1.1.0)\n",
       "Requirement already satisfied: autogluon.tabular==1.1.0 in /usr/local/lib/python3.10/site-packages (from autogluon.tabular[all]==1.1.0->autogluon) (1.1.0)\n",
@@ -416,15 +416,15 @@
       "Requirement already satisfied: cffi>=1.12 in /usr/local/lib/python3.10/site-packages (from cryptography>=2.6.0->aliyun-python-sdk-core>=2.13.12->oss2~=2.17.0->openxlab->opendatalab->openmim<0.4.0,>=0.3.7->autogluon.multimodal==1.1.0->autogluon) (1.16.0)\n",
       "Requirement already satisfied: pycparser in /usr/local/lib/python3.10/site-packages (from cffi>=1.12->cryptography>=2.6.0->aliyun-python-sdk-core>=2.13.12->oss2~=2.17.0->openxlab->opendatalab->openmim<0.4.0,>=0.3.7->autogluon.multimodal==1.1.0->autogluon) (2.21)\n",
       "Downloading setuptools-60.2.0-py3-none-any.whl (953 kB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m953.1/953.1 kB\u001b[0m \u001b[31m48.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: setuptools\n",
+      "\u001B[2K   \u001B[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001B[0m \u001B[32m953.1/953.1 kB\u001B[0m \u001B[31m48.2 MB/s\u001B[0m eta \u001B[36m0:00:00\u001B[0m\n",
+      "\u001B[?25hInstalling collected packages: setuptools\n",
       "  Attempting uninstall: setuptools\n",
       "    Found existing installation: setuptools 69.5.1\n",
       "    Uninstalling setuptools-69.5.1:\n",
       "      Successfully uninstalled setuptools-69.5.1\n",
       "Successfully installed setuptools-60.2.0\n",
-      "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
-      "\u001b[0m"
+      "\u001B[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001B[0m\u001B[33m\n",
+      "\u001B[0m"
      ]
     }
    ],
@@ -2016,6 +2016,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### Temperature Categorical Explanations\n",
+    "* 0-10: Cold—0\n",
+    "* 10-20: Cool-1\n",
+    "* 20-30: Warm—2\n",
+    "* 30-40: Hot—3\n",
+    "* 40+: Very Hot—4\n",
+    "\n",
+    "### Wind Speed Categorical Explanations\n",
+    "* 0-10: Calm—0\n",
+    "* 10-20: Light Air—1\n",
+    "* 20-30: Breeze—2\n",
+    "* 30-40: Gale—3\n",
+    "* 40+: Storm—4\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# create new feature for categorical temp\n",
+    "train_clean['temp_cat'] = pd.cut(train_clean['temp'], bins=[0, 10, 20, 30, 40], labels=['0', '1', '2', '3'])\n",
+    "test['temp_cat'] = pd.cut(test['temp'], bins=[0, 10, 20, 30, 40], labels=['0', '1', '2', '3'])\n",
+    "\n",
+    "# drop the temp column\n",
+    "train_clean = train_clean.drop(columns=['temp'])\n",
+    "test = test.drop(columns=['temp'])"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Categorize winds peed\n",
+    "train_clean['windspeed_cat'] = pd.cut(train_clean['windspeed'], bins=[0, 10, 20, 30, 40], labels=['0', '1', '2', '3'])\n",
+    "test['windspeed_cat'] = pd.cut(test['windspeed'], bins=[0, 10, 20, 30, 40], labels=['0', '1', '2', '3'])\n",
+    "\n",
+    "# drop the windspeed column\n",
+    "train_clean = train_clean.drop(columns=['windspeed'])\n",
+    "test = test.drop(columns=['windspeed'])\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {
@@ -2023,9 +2079,13 @@
    },
    "outputs": [],
    "source": [
-    "# get dummy variables for the season and weather\n",
+    "# get dummies variables for the season and weather\n",
     "train_clean = pd.get_dummies(train_clean, columns=['season', 'weather'])\n",
-    "test = pd.get_dummies(test, columns=['season', 'weather'])\n"
+    "test = pd.get_dummies(test, columns=['season', 'weather'])\n",
+    "\n",
+    "# get dummies for windspeed and temp\n",
+    "train_clean = pd.get_dummies(train_clean, columns=['temp_cat', 'windspeed_cat'])\n",
+    "test = pd.get_dummies(test, columns=['temp_cat', 'windspeed_cat'])\n"
    ]
   },
   {
@@ -2230,7 +2290,7 @@
     }
    ],
    "source": [
-    "# View are new feature\n",
+    "# View  the new features\n",
     "train_clean.head()"
    ]
   },
@@ -3284,7 +3344,7 @@
      "evalue": "invalid syntax (776584746.py, line 6)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[46], line 6\u001b[0;36m\u001b[0m\n\u001b[0;31m    \"score\": [?, ?, ?]\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001B[0;36m  Cell \u001B[0;32mIn[46], line 6\u001B[0;36m\u001B[0m\n\u001B[0;31m    \"score\": [?, ?, ?]\u001B[0m\n\u001B[0m              ^\u001B[0m\n\u001B[0;31mSyntaxError\u001B[0m\u001B[0;31m:\u001B[0m invalid syntax\n"
      ]
     }
    ],
