updated the HPO

--- a/project/bike-sharing-project-using-autogluon.ipynb
+++ b/project/bike-sharing-project-using-autogluon.ipynb
@@ -3790,37 +3790,17 @@
     "metric = 'rmse'\n",
     "\n",
     "# generate hyperparameters for the autogluon model\n",
-    "\n",
     "hyperparameters = {\n",
-    "    'GBM': [\n",
-    "        space.Real(0.01, 1, default=0.1, name='learning_rate'),\n",
-    "        space.Int(1, 10, default=4, name='num_boost_round'),\n",
-    "        space.Real(0.8, 1, default=1, name='colsample_bylevel'),\n",
-    "        space.Real(0.8, 1, default=1, name='colsample_bytree'),\n",
-    "        space.Real(0.8, 1, default=1, name='colsample_bynode'),\n",
-    "        space.Real(0.01, 1, default=1, name='subsample'),\n",
-    "        space.Real(0.01, 1, default=1, name='row_sampling'),\n",
-    "        space.Categorical('gbtree', 'dart', 'gblinear', default='gbtree', name='booster'),\n",
-    "        space.Categorical('gbtree', 'gblinear', default='gbtree', name='tree_method'),\n",
-    "        space.Categorical('auto', 'exact', 'approx', 'hist', default='auto', name='hist_method'),\n",
-    "        space.Categorical('depthwise', 'lossguide', default='depthwise', name='grow_policy'),\n",
-    "        space.Categorical('gbtree', 'dart', 'goss', default='gbtree', name='boosting_type'),\n",
-    "        space.Categorical('gbdt', 'rf', 'dart', 'goss', default='gbdt', name='boosting'),\n",
-    "        space.Categorical('mse', 'rmse', 'mae', 'poisson', 'quantile', 'gamma', 'tweedie', default='mse', name='objective'),\n",
-    "        space.Real(0.1, 10, default=1, name='reg_alpha'),\n",
-    "        space.Real(0.1, 10, default=1, name='reg_lambda'),\n",
-    "        space.Real(0.1, 10, default=1, name='scale_pos_weight'),\n",
-    "        space.Real(0.1, 10, default=1, name='min_split_loss'),\n",
-    "        space.Real(0.1, 10, default=1, name='min_child_weight'),\n",
-    "        space.Real(0.1, 10, default=1, name='min_child_samples'),\n",
-    "        space.Real(0.1, 10, default=1, name='min_gain_to_split'),\n",
-    "    ]\n",
+    "    'num_trials': 10,\n",
+    "    'search_strategy': 'random',\n",
+    "    'learning_rate': 0.1,\n",
+    "    'num_units': [128, 64, 32]\n",
     "}\n",
     "# tuning args\n",
     "hyperparameter_tune_kwargs = {\n",
     "    'n_trails':10,\n",
     "    'scheduler':'local',\n",
-    "    'searcher':'auto'\n",
+    "    'searcher':'random'\n",
     "}"
    ]
   },
