updated the HPO for the knn ,xgb, rf, cat and gbm

--- a/project/bike-sharing-project-using-autogluon.ipynb
+++ b/project/bike-sharing-project-using-autogluon.ipynb
@@ -3791,10 +3791,57 @@
     "\n",
     "# generate hyperparameters for the autogluon model\n",
     "hyperparameters = {\n",
-    "    'num_trials': 10,\n",
-    "    'search_strategy': 'random',\n",
-    "    'learning_rate': 0.1,\n",
-    "    'num_units': [128, 64, 32]\n",
+    "    'GBM': {\n",
+    "        'num_boost_round': 100,\n",
+    "        'num_leaves': space.Int(lower=26, upper=66, default=36),\n",
+    "        'num_threads': 4,\n",
+    "        'objective': 'regression',\n",
+    "        'learning_rate': space.Real(lower=1e-3, upper=1, default=1e-1, log=True),\n",
+    "        'feature_fraction': space.Real(lower=0.5, upper=1, default=1, log=False),\n",
+    "        'min_data_in_leaf': space.Int(lower=20, upper=50, default=30),\n",
+    "        'seed_value': 0,\n",
+    "    },\n",
+    "    \n",
+    "    'CAT': {\n",
+    "        'iterations': 100,\n",
+    "        'learning_rate': space.Real(lower=1e-3, upper=1, default=1e-1, log=True),\n",
+    "        'depth': space.Int(lower=4, upper=10, default=6),\n",
+    "        'l2_leaf_reg': space.Real(lower=1e-2, upper=1e2, default=1, log=True),\n",
+    "        'border_count': space.Int(lower=32, upper=255, default=128),\n",
+    "        'thread_count': 4,\n",
+    "        'objective': 'RMSE',\n",
+    "        'random_seed': 0,\n",
+    "    },\n",
+    "    \n",
+    "    'RF': {\n",
+    "        'n_estimators': 100,\n",
+    "        'max_features': space.Real(lower=0.1, upper=1, default=1, log=False),\n",
+    "        'min_samples_split': space.Int(lower=2, upper=20, default=2),\n",
+    "        'min_samples_leaf': space.Int(lower=1, upper=20, default=1),\n",
+    "        'n_jobs': 4,\n",
+    "        'random_state': 0,\n",
+    "    },\n",
+    "    \n",
+    "    'XGB': {\n",
+    "        'n_estimators': 100,\n",
+    "        'max_depth': space.Int(lower=3, upper=10, default=6),\n",
+    "        'learning_rate': space.Real(lower=1e-3, upper=1, default=1e-1, log=True),\n",
+    "        'gamma': space.Real(lower=0, upper=10, default=0, log=True),\n",
+    "        'min_child_weight': space.Real(lower=1, upper=10, default=1, log=True),\n",
+    "        'subsample': space.Real(lower=0.5, upper=1, default=1, log=False),\n",
+    "        'colsample_bytree': space.Real(lower=0.5, upper=1, default=1, log=False),\n",
+    "        'reg_alpha': space.Real(lower=1e-2, upper=1e2, default=1, log=True),\n",
+    "        'reg_lambda': space.Real(lower=1e-2, upper=1e2, default=1, log=True),\n",
+    "        'seed': 0,\n",
+    "    },\n",
+    "    \n",
+    "    'KNN': {\n",
+    "        'n_neighbors': space.Int(lower=1, upper=20, default=5),\n",
+    "        'weights': 'uniform',\n",
+    "        'algorithm': 'auto',\n",
+    "        'leaf_size': 30,\n",
+    "        'p': 2,\n",
+    "    },\n",
     "}\n",
     "# tuning args\n",
     "hyperparameter_tune_kwargs = {\n",
