added the plot for the predcitions

--- a/project/bike-sharing-project-using-autogluon.ipynb
+++ b/project/bike-sharing-project-using-autogluon.ipynb
@@ -14622,6 +14622,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create the predictor plot\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 58,
    "metadata": {
     "tags": []
