--- a/project/bike-sharing-project-using-autogluon.ipynb
+++ b/project/bike-sharing-project-using-autogluon.ipynb
@@ -8113,42 +8113,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "usage: jupyter [-h] [--version] [--config-dir] [--data-dir] [--runtime-dir]\n",
-      "               [--paths] [--json] [--debug]\n",
-      "               [subcommand]\n",
-      "\n",
-      "Jupyter: Interactive Computing\n",
-      "\n",
-      "positional arguments:\n",
-      "  subcommand     the subcommand to launch\n",
-      "\n",
-      "optional arguments:\n",
-      "  -h, --help     show this help message and exit\n",
-      "  --version      show the versions of core jupyter packages and exit\n",
-      "  --config-dir   show Jupyter config dir\n",
-      "  --data-dir     show Jupyter data dir\n",
-      "  --runtime-dir  show Jupyter runtime dir\n",
-      "  --paths        show all Jupyter paths. Add --json for machine-readable\n",
-      "                 format.\n",
-      "  --json         output paths as machine-readable json\n",
-      "  --debug        output debug information about paths\n",
-      "\n",
-      "Available subcommands: kernel kernelspec migrate run troubleshoot\n",
-      "\n",
-      "Jupyter command `jupyter-nbconvert` not found.\n"
+      "[NbConvertApp] Converting notebook bike-sharing-project-using-autogluon.ipynb to html\n",
+      "[NbConvertApp] WARNING | Alternative text is missing on 5 image(s).\n",
+      "[NbConvertApp] Writing 2361065 bytes to bike-sharing-project-using-autogluon.html\n"
      ]
     }
    ],
    "source": [
     "# Convert the notebook to html\n",
-    "!jupyter nbconvert --to bike-sharing-project-using-autogluon.ipynb\n"
+    "!jupyter nbconvert --to html bike-sharing-project-using-autogluon.ipynb\n"
    ]
   },
   {
@@ -8156,9 +8136,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "!"
-   ]
+   "source": []
   }
  ],
  "metadata": {
